--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ build/
 
 ### Mac OS ###
 .DS_Store
+.idea
+.
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
